test/bad/nullables/op11.px

class A def
    x: Int

a: A? = A()
a?.y
